syntax = "proto3";

package yandex.cloud.priv.vpc.v1.inner;

import "ydb/public/api/client/yc_private/common/validation.proto";
import "ydb/public/api/client/yc_private/vpc/inner/port_state.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/vpc/inner;vpcinnerpb";
option java_outer_classname = "PVPSS";

service PortStateService {
  // Subscribe call used by vpc-node for obtaining actual PortState state.
  rpc Subscribe(PortStateSubscribeRequest)
      returns (PortStateSubscribeResponse);
  // Unsubscribe delete port config subscription.
  rpc Unsubscribe(PortStateUnsubscribeRequest)
      returns (PortStateUnsubscribeResponse);
}

message PortStateSubscribeRequest {
  string node_fqdn = 1 [ (required) = true ];
  int64 grpc_port = 4 [ (value) = "0-65535" ];
  PortIdentifier port_identifier = 3 [ (required) = true ];

  string node_port = 2;
}
message PortStateSubscribeResponse {
  PortState port_state = 1;
}

message PortStateUnsubscribeRequest {
  string node_fqdn = 1 [ (required) = true ];
  int64 grpc_port = 4 [ (value) = "0-65535" ];
  PortIdentifier port_identifier = 3 [ (required) = true ];

  string node_port = 2;
}

message PortStateUnsubscribeResponse {
}
